--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,12 @@
             android:layout_below="@+id/main_tb"
             android:layout_marginVertical="4dp"/>
 
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipe"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rv_tag">
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/home_rv"
             android:layout_width="match_parent"
@@ -38,6 +44,8 @@
             app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
             tools:listitem="@layout/item_home"
             android:layout_below="@+id/rv_tag"/>
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </RelativeLayout>
 
         <LinearLayout
