--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,9 @@
     tools:context=".activity.MainActivity">
 
     <RelativeLayout
+        android:id="@+id/drawer_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/drawer_main">
+        android:layout_height="match_parent">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/main_tb"
@@ -26,24 +26,24 @@
             android:id="@+id/et_kw"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/main_tb"
+            android:layout_marginHorizontal="8dp"
             android:background="@drawable/shape_tag"
             android:drawableRight="@drawable/baseline_search_24"
-            android:layout_below="@+id/main_tb"
-            android:padding="8dp"
-            android:layout_marginHorizontal="8dp"
+            android:imeOptions="actionSearch"
             android:includeFontPadding="true"
             android:inputType="text"
-            android:imeOptions="actionSearch"
-            android:maxLines="1"/>
+            android:maxLines="1"
+            android:padding="8dp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_tag"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
-            android:orientation="horizontal"
             android:layout_below="@+id/et_kw"
-            android:layout_marginVertical="8dp" />
+            android:layout_marginVertical="8dp"
+            android:orientation="horizontal"
+            app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager" />
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipe"
@@ -51,58 +51,61 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/rv_tag">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/home_rv"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
-            tools:listitem="@layout/item_home"
-            android:layout_below="@+id/rv_tag"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/home_rv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/rv_tag"
+                android:background="#E9E9E9"
+                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+                tools:listitem="@layout/item_home" />
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </RelativeLayout>
 
+    <LinearLayout
+        android:id="@+id/drawer_contents"
+        android:layout_width="100dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/material_dynamic_tertiary50"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <!--  header로 만들기(addheaderview)  -->
+
         <LinearLayout
-            android:id="@+id/drawer_contents"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:background="@color/material_dynamic_tertiary50"
+            android:id="@+id/layout_m_y"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/cardview_shadow_start_color"
             android:gravity="center"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/layout_m_y"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/cardview_shadow_start_color"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/v_year"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="2023"
-                    android:textSize="24sp" />
-
-                <TextView
-                    android:id="@+id/v_month"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:includeFontPadding="false"
-                    android:text="02"
-                    android:textSize="56sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/v_date_recycler"
+            <TextView
+                android:id="@+id/v_year"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/item_daily_calendar"
-                android:overScrollMode="never"/>
+                android:layout_height="wrap_content"
+                android:text="2023"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/v_month"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:includeFontPadding="false"
+                android:text="02"
+                android:textSize="56sp"
+                android:textStyle="bold" />
         </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/v_date_recycler"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:overScrollMode="never"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_daily_calendar" />
+    </LinearLayout>
 
 </androidx.drawerlayout.widget.DrawerLayout>
