--- a/app/src/main/res/layout/item_tag.xml
+++ b/app/src/main/res/layout/item_tag.xml
@@ -7,12 +7,12 @@
         android:id="@+id/tv_tag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/shape_tag"
+        android:background="@drawable/tag_selector"
         android:paddingHorizontal="16dp"
         android:paddingVertical="12dp"
         android:text="태그 이름"
         android:textSize="20sp"
-        android:textColor="@color/black"
+        android:textColor="@drawable/tag_txt_color_selector"
         android:layout_marginHorizontal="8dp"
         android:layout_marginVertical="8dp"/>
 
