--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,6 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <group android:id="@+id/main_menu">
+        <item android:id="@+id/all" android:title="전체보기" android:icon="@drawable/baseline_ballot_24" app:showAsAction="always"/>
         <item android:id="@+id/tag" android:title="태그 모아보기" android:icon="@drawable/baseline_tag_24" app:showAsAction="always"/>
         <item android:id="@+id/key" android:title="키워드 검색" android:icon="@drawable/baseline_key_24" app:showAsAction="always"/>
         <item android:id="@+id/add" android:title="추가" android:icon="@drawable/baseline_add_24" app:showAsAction="always"/>
