--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,12 +7,12 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="메모\n모아"
-        android:textSize="80sp"
-        android:textColor="@color/black"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="120dp"
-        android:layout_marginBottom="40dp"/>
+        android:layout_marginBottom="40dp"
+        android:text="메모\n모아"
+        android:textColor="@color/black"
+        android:textSize="80sp" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -22,41 +22,47 @@
         android:background="@drawable/shape_tag"
         android:padding="24dp">
 
-    <EditText
-        android:id="@+id/et_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="아이디"
-        android:gravity="center"/>
+        <EditText
+            android:id="@+id/et_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:hint="아이디"
+            android:maxEms="1"
+            android:maxLines="1" />
 
-    <EditText
-        android:id="@+id/et_nick"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="닉네임"
-        android:layout_below="@+id/et_id"
-        android:gravity="center"/>
+        <EditText
+            android:id="@+id/et_nick"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/et_id"
+            android:gravity="center"
+            android:hint="닉네임"
+            android:maxEms="1"
+            android:maxLines="1" />
 
-    <EditText
-        android:id="@+id/et_pw"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="비밀번호"
-        android:inputType="textPassword"
-        android:layout_below="@+id/et_nick"
-        android:gravity="center"/>
+        <EditText
+            android:id="@+id/et_pw"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/et_nick"
+            android:gravity="center"
+            android:hint="비밀번호"
+            android:inputType="textPassword"
+            android:maxEms="1"
+            android:maxLines="1" />
 
         <TextView
             android:id="@+id/btn_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="로그인"
             android:layout_below="@+id/et_pw"
-            android:layout_marginTop="20dp"
-            android:textSize="36sp"
             android:layout_centerHorizontal="true"
-            android:textStyle="bold"
-            android:textColor="@color/black"/>
+            android:layout_marginTop="20dp"
+            android:text="로그인"
+            android:textColor="@color/black"
+            android:textSize="36sp"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
