--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:menu="@menu/main_menu"
-            app:navigationIcon="@drawable/baseline_calendar_today_24"
             app:title="23.02.13(월)"
             app:titleTextColor="@color/black" />
 
@@ -73,6 +72,18 @@
             android:textSize="32sp"
             android:layout_centerInParent="true"
             android:textColor="@color/black" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baseline_add_24"
+            app:tint="@color/white"
+            android:backgroundTint="@color/black"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_margin="32dp"/>
+
     </RelativeLayout>
 
     <RelativeLayout
