--- a/app/src/main/res/layout/bsd_calendar_monthly.xml
+++ b/app/src/main/res/layout/bsd_calendar_monthly.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".activity.MainActivity">
+    tools:context="com.ezralee.bdodonggumbyul.activity.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
